--- a/default.conf
+++ b/default.conf
@@ -8,11 +8,12 @@ server {
         location = /404.html {
                 internal;
         }
-        location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_pass localhost:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
+        location ~ \.php(/|$) {
+                fastcgi_split_path_info ^(.+\.php)(/.*)$;
+                try_files $uri $uri/ /app.php$is_args$args =404;
+                fastcgi_pass localhost:9000;
+                fastcgi_index index.php;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                include fastcgi_params;
         }
 }
